Modification faite pour que ce soit propre

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./image.png');
+    background-image: url('./sword.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
